# licensecc

./: .buildinfo  .clang-format  .cproject  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  CMakeLists.txt.bak  CONTRIBUTING.md  LICENSE  README.md  genindex.html  git_rebase.sh  index.html  objects.inv  search.html  searchindex.js  sitemap.xml  windows_travis.bat  windows_travis_build_boost.bat
.doctrees/: environment.pickle  index.doctree
.doctrees/analysis/: Development-And-Usage-Workflow.doctree  features.doctree
.doctrees/api/: extend.doctree  hardware_identifiers.doctree  public_api.doctree
.doctrees/development/: Build-the-library-windows.doctree  Build-the-library.doctree  Dependencies.doctree  Development-Environment-Setup.doctree
.doctrees/other/: CREDITS.doctree  QA.doctree  glossary.doctree
.doctrees/usage/: Hardware-identifiers.doctree  License-retrieval.doctree  concepts.doctree  integration.doctree  issue-licenses.doctree  multi-feature.doctree
.github/: FUNDING.YML
.github/workflows/: cpp.yml  windows.yml
_sources/: index.rst.txt
_sources/analysis/: features.rst.txt
_sources/development/: Build-the-library-windows.rst.txt  Build-the-library.md.txt
_sources/other/: CREDITS.md.txt  glossary.rst.txt
analysis/: Development-And-Usage-Workflow.html  features.html
api/: extend.html  hardware_identifiers.html  public_api.html
apps/: CMakeLists.txt
apps/bootstrap/: CMakeLists.txt
apps/bootstrap/src/: bootstrap.cpp
apps/generator/: CMakeLists.txt
cmake/: Findlcc.cmake  Findlccgen.cmake  Findolm.cmake  FrameworkUtils.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
cmake/Modules/: FindCryptoPP.cmake  FindDbus.cmake  FindMetaLic.cmake  add_boost.cmake
development/: Build-the-library-windows.html  Build-the-library.html  Dependencies.html  Development-Environment-Setup.html
doc/: Basic-concepts.md  Build-the-library-windows.md  Build-the-library.md  CREDITS.md  Dependencies.md  Development-And-Usage-Workflow.md  Development-Environment-Setup.md  Doxyfile.in  Hardware-identifiers.md  Home.md  Integration.md  Issue-licenses.md  License-retrieval.md  QA.md  conf.py  features.md  index.rst  snippets.txt
doc/_templates/: breadcrumbs.html
doc/analysis/: Backoffice.md  Development-And-Usage-Workflow.md  features.md  features.rst
example/: CMakeLists.txt  example.cpp
libs/: CMakeLists.txt
libs/base/: CMakeLists.txt
libs/base/include/metalicensor/base/: EventRegistry.h  StringUtils.h  base.h  base64.h  logger.h
libs/base/src/: EventRegistry.cpp  StringUtils.cpp  logger.c  logger.cpp
libs/crypto/: CMakeLists.txt
libs/crypto/include/metalicensor/crypto/: CryptoHelper.h  CryptoHelperLinux.h  CryptoHelperWindows.h
libs/crypto/src/: CryptoHelper.cpp  CryptoHelperLinux.cpp  CryptoHelperWindows.cpp
libs/generator/: CMakeLists.txt
libs/generator/include/metalicensor/generator/: license-generator.h
libs/generator/src/: license-generator.cpp
libs/ini/: CMakeLists.txt
libs/ini/include/metalicensor/ini/: ConvertUTF.h  SimpleIni.h
libs/ini/src/: ConvertUTF.cpp
libs/licgen/: CMakeLists.txt
libs/licgen/include/metalicensor/licgen/: license-generator.h
libs/licgen/src/: license-generator.cpp
libs/mlic/: CMakeLists.txt
libs/mlic/include/metalicensor/mlic/: LicenseReader.h
libs/mlic/src/: LicenseReader.cpp  license++.cpp  pc-identifiers.c
libs/os/: CMakeLists.txt
libs/os/include/metalicensor/os/: os.h
libs/os/src/: network_id.c  os-linux.cpp  os-win.c  os-win.cpp
libs/reader/: CMakeLists.txt
libs/reader/include/metalicensor/reader/: pc-identifiers.h
libs/reader/src/: LicenseReader.cpp  license++.cpp  pc-identifiers.c  pc-identifiers.cpp
libs/utils/: CMakeLists.txt
libs/utils/include/metalicensor/api/: datatypes.h  license++.h
libs/utils/include/metalicensor/utils/: build_properties.hpp.in
libs/utils/src/: empty.cpp
modules/: toolchain-ubuntu-mingw64.cmake
other/: CREDITS.html  QA.html  glossary.html
scripts/: windows_download_boost.bat
src/: CMakeLists.txt  build_properties.h.in
src/bootstrap/: CMakeLists.txt  bootstrap.cpp  bootstrap_linux.cpp  bootstrap_win.cpp
src/bootstrap/win/: CmakeLists.txt  CryptoHelper.cpp  CryptoHelper.h  Main.cpp
src/cmake/: licensecc-config.cmake
src/inspector/: CMakeLists.txt  inspector.cpp
src/license-generator/: .gitignore  CMakeLists.txt  LicenseSigner.cpp  LicenseSigner.h  license-generator.cpp  license-generator.h
src/license-generator/linux/: LicenseSigner.cpp
src/license-generator/win/: LicenseSigner.cpp
src/scratch/linux/: os-linux.cpp
src/scratch/win/: Copy of Main.cpp  LicenseSigner.cpp
src/templates/: build_properties.h.in  licensecc_properties.h.in  licensecc_properties_test.h.in  public_key.inja
src/tools/: CMakeLists.txt
src/tools/base_lib/: CMakeLists.txt  CryptoHelper.cpp  CryptoHelper.h  README.TXT
src/tools/base_lib/linux/: CryptoHelperLinux.cpp  CryptoHelperLinux.h
src/tools/base_lib/win/: CryptoHelper.cpp  CryptoHelperWindows.cpp  CryptoHelperWindows.h
src/tools/bootstrap/: CMakeLists.txt  Main.cpp  bootstrap.cpp  bootstrap_linux.cpp
src/tools/license-generator/: CMakeLists.txt  LicenseSigner.h  license-generator-main.cpp  license-generator.cpp  license-generator.h
src/tools/pc-identifier/: CMakeLists.txt
test/: CMakeLists.txt
test/functional/: CMakeLists.txt  crack_test.cpp  date_test.cpp  generate-license.cpp  generate-license.h  hijiaking_test.cpp  hw_identifier_it_test.cpp  pc_identifier_it_test.cpp  signature_verifier_test.cpp  standard-license_test.cpp  volid_test.cpp
test/license-generator/: CMakeLists.txt  license-generator_test.cpp
test/scratch/: pc-identifiers.c
tests/: CMakeLists.txt
tests/scratch/: base62.c  pc-identifiers.c  stackoverflow.cpp
tests/src/: date.cpp  generate.cpp  generate.h  generator.cpp  hijiaking.cpp  linux.cpp  reader.cpp  standard_license.cpp  test_reader.ini  volid.cpp
usage/: Hardware-identifiers.html  License-retrieval.html  concepts.html  integration.html  issue-licenses.html  multi-feature.html
(+24 files in other folders)
